[workspace]
resolver = "2"

members = [
    # Swap two variables without using a third variable.
    "variables_01",
    
    # Declare a constant and print its value.
    "variables_02",
    
    # Create a mutable variable and change its value inside a loop.
    "variables_03",
    
    # Shadow a variable and print both values.
    "variables_04"
]
