[workspace]
resolver = "2"

members = [
    # Implement a program that checks if a number is even or odd.
    "control_flow_01",
    
    # Write a simple program that uses if-else to compare two numbers.
    "control_flow_02",
    
    # Create a calculator using a match statement.
    "control_flow_03",
    
    # Implement a program that checks whether a character is a vowel or consonant
    "control_flow_04",
    
    # Write a program that checks if a number is positive, negative, or zero.
    "control_flow_05",
    
    # Implement a program that finds the largest of three numbers.
    "control_flow_06",
    
    # Create a program that simulates a basic traffic light system.
    "control_flow_07",
    
    # Write a program that checks if a year is a leap year.
    "control_flow_08",
    
    # Create a simple menu-driven program using a loop and match statement.
    "control_flow_09",
    
    # Write a program that calculates the factorial of a number using a loop.
    "control_flow_10"
]
