[workspace]
resolver = "2"

members = [
    # Create a function that takes ownership of a string and prints it.
    "ownership_01",
    
    # Implement a function that borrows a string and returns its length.
    "ownership_02",
    
    # Write a function that takes two borrowed strings and concatenates them.
    "ownership_03",
    
    # Create a function that returns ownership of a string to the caller.
    "ownership_04",

    # Implement a function that modifies a borrowed string using mutable references.
    "ownership_05",
    
    # Write a program that demonstrates the use of multiple references.
    "ownership_06"
]
