[workspace]
resolver = "2"

members = [
    # Create a function that takes ownership of a string and prints it.
    "ownership_01",
    
    # Implement a function that borrows a string and returns its length.
    "ownership_02",
    
    # Write a function that takes two borrowed strings and concatenates them.
    "ownership_03",
    
    # Create a function that returns ownership of a string to the caller.
    "ownership_04",

    # Implement a function that modifies a borrowed string using mutable references.
    "ownership_05",
    
    # Write a program that demonstrates the use of multiple references.
    "ownership_06",
    
    # Create a function that borrows an array and returns its sum.
    "ownership_07",
    
    # Implement a program that shows how ownership changes when a variable is reassigned.
    "ownership_08",
    
    # Write a function that takes ownership of a vector and returns its length.
    "ownership_09",
    
    # Create a program that demonstrates the use of references in function parameters and return types.
    "ownership_10"
]
