[workspace]
resolver = "2"

members = [
    # Create a struct to represent a book with fields for title, author, and pages.
    "structs_01",
    
    # Implement a method for the book struct to display its details.
    "structs_02",
    
    # Write a program that creates a struct to represent a point in 2D space and calculate the distance between two points.
    "structs_03",
    
    # Create a struct to represent a rectangle and calculate its area.
    "structs_04",
    
    # Implement a struct to represent a student with fields for name, age, and grades, and calculate the average grade.
    "structs_05",
    
    # Write a program that creates a struct to represent a complex number and implements methods for addition and subtraction.
    "structs_06",
    
    # Create a struct to represent a car with fields for make, model, and year, and implement methods to start and stop the car.
    "structs_07",
    
    # Implement a struct to represent a bank account with fields for account number, balance, and owner, and create methods to deposit and withdraw money.
    "structs_08",
    
    # Write a program that creates a struct to represent a person with fields for name, age, and address, and implement methods to update the address.
    "structs_09",
    
    # Create a struct to represent a circle with a field for radius, and implement methods to calculate the circumference and area.
    "structs_10"
]
