[workspace]
resolver = "2"

members = [
    # Create a trait called Printable with a method print and implement it for different types (e.g., struct, enum).
    "traits_01",
    
    # Write a program that creates a trait called Calculable with methods for addition, subtraction, multiplication, and division, and implement it for a struct representing a calculator.
    "traits_02",
    
    # Implement a trait called Drawable with a method draw and implement it for different shapes (Circle, Square, Rectangle).
    "traits_03",
    
    # Write a program that creates a trait called Serializable with methods for serializing and deserializing data, and implement it for a struct representing a user.
    "traits_04",
    
    # Implement a trait called Comparable with a method compare and implement it for different types (i32, f64, String).
    "traits_05",

    # Write a program that creates a trait called Cloneable with a method clone and implement it for a struct representing a document.
    "traits_06"
]
