[workspace]
resolver = "2"

members = [
    # Create a trait called Printable with a method print and implement it for different types (e.g., struct, enum).
    "traits_01",
    
    # Write a program that creates a trait called Calculable with methods for addition, subtraction, multiplication, and division, and implement it for a struct representing a calculator.
    "traits_02",
    
    # Implement a trait called Drawable with a method draw and implement it for different shapes (Circle, Square, Rectangle).
    "traits_03",
    
    # Write a program that creates a trait called Serializable with methods for serializing and deserializing data, and implement it for a struct representing a user.
    "traits_04",
    
    # Implement a trait called Comparable with a method compare and implement it for different types (i32, f64, String).
    "traits_05",

    # Write a program that creates a trait called Cloneable with a method clone and implement it for a struct representing a document.
    "traits_06",
    
    # Implement a trait called Readable with a method read and implement it for different file types.
    "traits_07",
    
    # Create a trait called Filterable with a method filter that filters elements from a collection of structs representing products (Product { name, price, in_stock }).
    "traits_08",
    
    # Create a trait called StateTransition with a method transition that takes an charachter and based on his score change his level in GameLevel (with levels like Beginner, Intermediate, and Expert).
    "traits_09"
]
