[workspace]
resolver = "2"

members = [
    # Create a module to organize functions for mathematical operations and use it in a main program.
    "modules_01",
    
    # Implement a program that uses a module to organize functions for file handling and use it in a main program.
    "modules_02",
    
    # Write a program that creates a module to organize functions for string processing and use it in a main program.
    "modules_03",

    # Create a module geometry with submodules shapes and operations.
    "modules_04"
]
