[workspace]
resolver = "2"

members = [
    # Write a program that uses threads to perform multiple calculations in parallel.
    "concurrency_01",
    
    # Implement a program that spawns multiple threads to process a large array and combines the results.
    "concurrency_02",
    
    # Create a program that uses channels to send messages between threads.
    "concurrency_03",
    
    # Implement a program that uses a thread pool to manage and execute multiple tasks concurrently.
    "concurrency_04"
]
